clusters/home/public/test/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.pavel-usanli.online`)
      kind: Rule
      priority: 10
      services:
        - name: nginx
          port: 80

  tls:
    certResolver: cloudflare
